# jokes-mlops-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: pre-commit.yml
configs/: README.md  experiment_cfg.py  mlflow_cfg.py  model_cfg.py  tokenizer_cfg.py
data/: data.txt.dvc
jokes_mlops_project/: __init__.py  infer.py  train.py
jokes_mlops_project/model/: model.py  torenizer.py
jokes_mlops_project/utils/: model_storage.py  utils.py
