[tool.poetry]
name = "jokes-mlops-project"
version = "0.1.0"
description = ""
authors = ["johanddc <ivan.peshekhonov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
bpe = "^1.0"
flake8-pyproject = "^1.2.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
