[tool.poetry]
name = "jokes-mlops-project"
version = "0.1.0"
description = ""
authors = ["johanddc <ivan.peshekhonov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
bpe = "^1.0"
flake8-pyproject = "^1.2.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["jokes_mlops_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
max-complexity = 12
select = ["B", "C", "E", "F", "W", "B9"]
exclude = [
    ".git",
    "__pycache__"
]
extend-ignore = [
    "E203", "E501", "W503", "B950"
]
per-file-ignores = [
    "**/__init__.py: F401"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
